overflow fixed

--- a/src/Components/Chat.css
+++ b/src/Components/Chat.css
@@ -51,7 +51,8 @@
 	background: #fff;
 	border-radius: 10px;
 	width: fit-content;
-	margin-bottom: 30px;
+	max-width: 90%;
+	margin-bottom: 25px;
 	box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.15);
 }
 
